src/main/java/com/example/uad/error/ApplicationException.java
package com.example.uad.error;public class ApplicationException {
}
